# email-sender

./: .gitignore  Dockerfile  Makefile  main.py  pyproject.toml
tests/: test_main.py
