[tool.poetry]
name = "email-microservice"
version = "0.1.0"
description = ""
authors = ["rhodinemma <rhodinemma10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
aiosmtplib = "^3.0.1"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"